--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,16 @@
-<<<<<<< HEAD
-﻿absl-py==1.4.0
-astunparse==1.6.3
 blinker==1.9.0
-cachetools==5.3.0
-certifi==2022.12.7
-charset-normalizer==3.1.0
 click==8.1.7
 colorama==0.4.6
-contourpy==1.0.7
-cycler==0.11.0
 Flask==3.1.0
-flatbuffers==23.3.3
-fonttools==4.39.3
-gast==0.4.0
-google-auth==2.17.3
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grpcio==1.54.0
 gunicorn==23.0.0
-h5py==3.8.0
-idna==3.4
 itsdangerous==2.2.0
-jax==0.4.8
 Jinja2==3.1.4
-joblib==1.2.0
-keras==2.12.0
-kiwisolver==1.4.4
-libclang==16.0.0
-Markdown==3.4.3
-MarkupSafe==2.1.2
-matplotlib==3.7.1
-ml-dtypes==0.1.0
-numpy==1.23.5
-oauthlib==3.2.2
-opt-einsum==3.3.0
-packaging==23.1
-pandas==1.5.3
-Pillow==9.5.0
-protobuf==4.22.3
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pytz==2022.7.1
-requests==2.29.0
-requests-oauthlib==1.3.1
-=======
-﻿absl-py==1.4.0
-astunparse==1.6.3
-blinker==1.9.0
-cachetools==5.3.0
-certifi==2022.12.7
-charset-normalizer==3.1.0
-click==8.1.7
-colorama==0.4.6
-contourpy==1.0.7
-cycler==0.11.0
-Flask==3.1.0
-gunicorn==23.0.0
-MarkupSafe==2.1.2
-matplotlib==3.7.1
-ml-dtypes==0.1.0
-numpy==1.23.5
-pandas==1.5.3
-
->>>>>>> 59208bbb7c5d721aadcf37a8b95f29e152fa6e40
+MarkupSafe==3.0.2
+numpy==2.1.3
+packaging==24.2
+pandas==2.2.3
+python-dateutil==2.9.0.post0
+pytz==2024.2
+six==1.16.0
+tzdata==2024.2
+Werkzeug==3.1.3
